--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-with-styles": "^4.1.0",
-    "react-with-styles-interface-aphrodite": "^6.0.1"
+    "react-with-styles-interface-aphrodite": "^6.0.1",
+    "storybook-addon-jsx": "^7.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,7 @@
     "@storybook/addon-links": "^6.0.20",
     "@storybook/node-logger": "^6.0.20",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.20",
+    "@storybook/react": "^5.2.8",
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1",
     "regenerator-runtime": "^0.12.1"
